@@ -15,10 +15,10 @@ import com.mirakl.client.mmp.operator.domain.shop.update.MiraklUpdatedShops;
 import com.mirakl.client.mmp.operator.request.shop.MiraklUpdateShopsRequest;
 import com.mirakl.client.mmp.request.additionalfield.MiraklRequestAdditionalFieldValue;
 import com.mirakl.client.mmp.request.additionalfield.MiraklRequestAdditionalFieldValue.MiraklSimpleRequestAdditionalFieldValue;
-import com.paypal.infrastructure.support.converter.Converter;
-import com.paypal.infrastructure.support.exceptions.HMCException;
 import com.paypal.infrastructure.mail.services.MailNotificationUtil;
 import com.paypal.infrastructure.mirakl.client.MiraklClient;
+import com.paypal.infrastructure.support.converter.Converter;
+import com.paypal.infrastructure.support.exceptions.HMCException;
 import com.paypal.infrastructure.support.logging.MiraklLoggingErrorsUtil;
 import com.paypal.kyc.documentextractioncommons.model.KYCDocumentInfoModel;
 import com.paypal.kyc.incomingnotifications.model.KYCDocumentNotificationModel;
@@ -38,7 +38,6 @@ import java.time.LocalDateTime;
 import java.util.Date;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static com.paypal.kyc.documentextractioncommons.model.KYCConstants.HYPERWALLET_KYC_REQUIRED_PROOF_AUTHORIZATION_BUSINESS_FIELD;
 import static com.paypal.kyc.documentextractioncommons.model.KYCConstants.HYPERWALLET_KYC_REQUIRED_PROOF_IDENTITY_BUSINESS_FIELD;
@@ -114,18 +113,18 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 
 	@RegisterExtension
 	final LogTrackerStub logTrackerStub = LogTrackerStub.create()
-			.recordForType(AbstractKYCUserStatusNotificationStrategy.class);
+		.recordForType(AbstractKYCUserStatusNotificationStrategy.class);
 
 	@Test
 	void updateShop_shouldCallMiraklApiWithValuesProvidedInNotificationBody() {
 		when(kycUserStatusNotificationBodyModelMock.getClientUserId()).thenReturn(SHOP_ID);
 		when(miraklClientMock.updateShops(any(MiraklUpdateShopsRequest.class)))
-				.thenReturn(miraklUpdatedShopResponseMock);
+			.thenReturn(miraklUpdatedShopResponseMock);
 		when(testObj.expectedKycMiraklStatus(kycUserStatusNotificationBodyModelMock))
-				.thenReturn(MiraklShopKycStatus.APPROVED);
+			.thenReturn(MiraklShopKycStatus.APPROVED);
 
 		when(kycRejectionReasonServiceMock.getRejectionReasonDescriptions(Mockito.anyList()))
-				.thenReturn(StringUtils.EMPTY);
+			.thenReturn(StringUtils.EMPTY);
 
 		testObj.updateShop(kycUserStatusNotificationBodyModelMock);
 
@@ -142,11 +141,11 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 		when(testObj.isKycAutomated()).thenReturn(true);
 		when(kycUserStatusNotificationBodyModelMock.getClientUserId()).thenReturn(SHOP_ID);
 		when(kycUserStatusNotificationBodyModelMock.getVerificationStatus())
-				.thenReturn(HyperwalletUser.VerificationStatus.REQUIRED);
+			.thenReturn(HyperwalletUser.VerificationStatus.REQUIRED);
 		when(miraklClientMock.updateShops(any(MiraklUpdateShopsRequest.class)))
-				.thenReturn(miraklUpdatedShopResponseMock);
+			.thenReturn(miraklUpdatedShopResponseMock);
 		when(testObj.expectedKycMiraklStatus(kycUserStatusNotificationBodyModelMock))
-				.thenReturn(MiraklShopKycStatus.REFUSED);
+			.thenReturn(MiraklShopKycStatus.REFUSED);
 
 		testObj.updateShop(kycUserStatusNotificationBodyModelMock);
 
@@ -155,11 +154,13 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 		assertThat(request.getShops()).hasSize(1);
 		assertThat(request.getShops().get(0).getShopId()).isEqualTo(Long.valueOf(SHOP_ID));
 		assertThat(request.getShops().get(0).getKyc().getStatus()).isEqualTo(MiraklShopKycStatus.REFUSED);
-		final MiraklRequestAdditionalFieldValue additionalFieldValue = request.getShops().get(0)
-				.getAdditionalFieldValues().get(0);
+		final MiraklRequestAdditionalFieldValue additionalFieldValue = request.getShops()
+			.get(0)
+			.getAdditionalFieldValues()
+			.get(0);
 		final MiraklSimpleRequestAdditionalFieldValue castedAdditionalFieldValue = (MiraklSimpleRequestAdditionalFieldValue) additionalFieldValue;
 		assertThat(castedAdditionalFieldValue.getCode())
-				.isEqualTo(HYPERWALLET_KYC_REQUIRED_PROOF_IDENTITY_BUSINESS_FIELD);
+			.isEqualTo(HYPERWALLET_KYC_REQUIRED_PROOF_IDENTITY_BUSINESS_FIELD);
 		assertThat(castedAdditionalFieldValue.getValue()).isEqualTo("true");
 	}
 
@@ -168,32 +169,34 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 		when(testObj.isKycAutomated()).thenReturn(true);
 		when(kycUserStatusNotificationBodyModelMock.getClientUserId()).thenReturn(SHOP_ID);
 		when(kycUserStatusNotificationBodyModelMock.getReasonsType())
-				.thenReturn(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED));
+			.thenReturn(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED));
 		when(kycUserStatusNotificationBodyModelMock.getLetterOfAuthorizationStatus())
-				.thenReturn(HyperwalletUser.LetterOfAuthorizationStatus.REQUIRED);
+			.thenReturn(HyperwalletUser.LetterOfAuthorizationStatus.REQUIRED);
 		when(miraklClientMock.updateShops(any(MiraklUpdateShopsRequest.class)))
-				.thenReturn(miraklUpdatedShopResponseMock);
+			.thenReturn(miraklUpdatedShopResponseMock);
 		when(testObj.expectedKycMiraklStatus(kycUserStatusNotificationBodyModelMock))
-				.thenReturn(MiraklShopKycStatus.REFUSED);
+			.thenReturn(MiraklShopKycStatus.REFUSED);
 		when(kycRejectionReasonServiceMock
-				.getRejectionReasonDescriptions(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED)))
-						.thenReturn(KYCRejectionReasonTypeEnum.getReasonHeader()
-								+ KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED.getReason()
-								+ KYCRejectionReasonTypeEnum.getReasonFooter());
+			.getRejectionReasonDescriptions(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED)))
+			.thenReturn(KYCRejectionReasonTypeEnum.getReasonHeader()
+					+ KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED.getReason()
+					+ KYCRejectionReasonTypeEnum.getReasonFooter());
 
 		testObj.updateShop(kycUserStatusNotificationBodyModelMock);
 
 		verify(kycRejectionReasonServiceMock)
-				.getRejectionReasonDescriptions(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED));
+			.getRejectionReasonDescriptions(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED));
 		verify(miraklClientMock).updateShops(miraklUpdateShopMockArgumentCaptor.capture());
 		final MiraklUpdateShopsRequest request = miraklUpdateShopMockArgumentCaptor.getValue();
 		assertThat(request.getShops()).hasSize(1);
 		assertThat(request.getShops().get(0).getShopId()).isEqualTo(Long.valueOf(SHOP_ID));
-		final MiraklRequestAdditionalFieldValue additionalFieldValue = request.getShops().get(0)
-				.getAdditionalFieldValues().get(0);
+		final MiraklRequestAdditionalFieldValue additionalFieldValue = request.getShops()
+			.get(0)
+			.getAdditionalFieldValues()
+			.get(0);
 		final MiraklSimpleRequestAdditionalFieldValue castedAdditionalFieldValue = (MiraklSimpleRequestAdditionalFieldValue) additionalFieldValue;
 		assertThat(castedAdditionalFieldValue.getCode())
-				.isEqualTo(HYPERWALLET_KYC_REQUIRED_PROOF_AUTHORIZATION_BUSINESS_FIELD);
+			.isEqualTo(HYPERWALLET_KYC_REQUIRED_PROOF_AUTHORIZATION_BUSINESS_FIELD);
 		assertThat(castedAdditionalFieldValue.getValue()).isEqualTo("true");
 	}
 
@@ -202,21 +205,21 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 		when(testObj.isKycAutomated()).thenReturn(true);
 		when(kycUserStatusNotificationBodyModelMock.getClientUserId()).thenReturn(SHOP_ID);
 		when(kycUserStatusNotificationBodyModelMock.getReasonsType())
-				.thenReturn(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED));
+			.thenReturn(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED));
 		when(kycUserStatusNotificationBodyModelMock.getVerificationStatus())
-				.thenReturn(HyperwalletUser.VerificationStatus.REQUIRED);
+			.thenReturn(HyperwalletUser.VerificationStatus.REQUIRED);
 		when(kycUserStatusNotificationBodyModelMock.getLetterOfAuthorizationStatus())
-				.thenReturn(HyperwalletUser.LetterOfAuthorizationStatus.REQUIRED);
+			.thenReturn(HyperwalletUser.LetterOfAuthorizationStatus.REQUIRED);
 		when(miraklClientMock.updateShops(any(MiraklUpdateShopsRequest.class)))
-				.thenReturn(miraklUpdatedShopResponseMock);
+			.thenReturn(miraklUpdatedShopResponseMock);
 		when(testObj.expectedKycMiraklStatus(kycUserStatusNotificationBodyModelMock))
-				.thenReturn(MiraklShopKycStatus.REFUSED);
+			.thenReturn(MiraklShopKycStatus.REFUSED);
 
 		when(kycRejectionReasonServiceMock
-				.getRejectionReasonDescriptions(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED)))
-						.thenReturn(KYCRejectionReasonTypeEnum.getReasonHeader()
-								+ KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED.getReason()
-								+ KYCRejectionReasonTypeEnum.getReasonFooter());
+			.getRejectionReasonDescriptions(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED)))
+			.thenReturn(KYCRejectionReasonTypeEnum.getReasonHeader()
+					+ KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED.getReason()
+					+ KYCRejectionReasonTypeEnum.getReasonFooter());
 
 		testObj.updateShop(kycUserStatusNotificationBodyModelMock);
 
@@ -224,16 +227,18 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 		final MiraklUpdateShopsRequest request = miraklUpdateShopMockArgumentCaptor.getValue();
 
 		verify(kycRejectionReasonServiceMock)
-				.getRejectionReasonDescriptions(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED));
+			.getRejectionReasonDescriptions(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED));
 
 		assertThat(request.getShops()).hasSize(1);
 		assertThat(request.getShops().get(0).getShopId()).isEqualTo(Long.valueOf(SHOP_ID));
-		final List<MiraklRequestAdditionalFieldValue> additionalFieldValue = request.getShops().get(0)
-				.getAdditionalFieldValues();
+		final List<MiraklRequestAdditionalFieldValue> additionalFieldValue = request.getShops()
+			.get(0)
+			.getAdditionalFieldValues();
 
 		assertThat(additionalFieldValue).hasSize(2);
 		final List<String> additionalCodes = additionalFieldValue.stream()
-				.map(MiraklRequestAdditionalFieldValue::getCode).collect(Collectors.toList());
+			.map(MiraklRequestAdditionalFieldValue::getCode)
+			.toList();
 
 		assertThat(additionalCodes).containsExactlyInAnyOrder(
 				HYPERWALLET_KYC_REQUIRED_PROOF_AUTHORIZATION_BUSINESS_FIELD,
@@ -246,21 +251,21 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 
 		when(kycUserStatusNotificationBodyModelMock.getClientUserId()).thenReturn(SHOP_ID);
 		when(kycUserStatusNotificationBodyModelMock.getReasonsType())
-				.thenReturn(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED));
+			.thenReturn(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED));
 		lenient().when(kycUserStatusNotificationBodyModelMock.getVerificationStatus())
-				.thenReturn(HyperwalletUser.VerificationStatus.REQUIRED);
+			.thenReturn(HyperwalletUser.VerificationStatus.REQUIRED);
 		lenient().when(kycUserStatusNotificationBodyModelMock.getLetterOfAuthorizationStatus())
-				.thenReturn(HyperwalletUser.LetterOfAuthorizationStatus.REQUIRED);
+			.thenReturn(HyperwalletUser.LetterOfAuthorizationStatus.REQUIRED);
 		when(miraklClientMock.updateShops(any(MiraklUpdateShopsRequest.class)))
-				.thenReturn(miraklUpdatedShopResponseMock);
+			.thenReturn(miraklUpdatedShopResponseMock);
 		when(testObj.expectedKycMiraklStatus(kycUserStatusNotificationBodyModelMock))
-				.thenReturn(MiraklShopKycStatus.REFUSED);
+			.thenReturn(MiraklShopKycStatus.REFUSED);
 
 		when(kycRejectionReasonServiceMock
-				.getRejectionReasonDescriptions(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED)))
-						.thenReturn(KYCRejectionReasonTypeEnum.getReasonHeader()
-								+ KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED.getReason()
-								+ KYCRejectionReasonTypeEnum.getReasonFooter());
+			.getRejectionReasonDescriptions(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED)))
+			.thenReturn(KYCRejectionReasonTypeEnum.getReasonHeader()
+					+ KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED.getReason()
+					+ KYCRejectionReasonTypeEnum.getReasonFooter());
 
 		testObj.updateShop(kycUserStatusNotificationBodyModelMock);
 
@@ -268,12 +273,13 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 		final MiraklUpdateShopsRequest request = miraklUpdateShopMockArgumentCaptor.getValue();
 
 		verify(kycRejectionReasonServiceMock)
-				.getRejectionReasonDescriptions(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED));
+			.getRejectionReasonDescriptions(List.of(KYCRejectionReasonTypeEnum.LETTER_OF_AUTHORIZATION_REQUIRED));
 
 		assertThat(request.getShops()).hasSize(1);
 		assertThat(request.getShops().get(0).getShopId()).isEqualTo(Long.valueOf(SHOP_ID));
-		final List<MiraklRequestAdditionalFieldValue> additionalFieldValue = request.getShops().get(0)
-				.getAdditionalFieldValues();
+		final List<MiraklRequestAdditionalFieldValue> additionalFieldValue = request.getShops()
+			.get(0)
+			.getAdditionalFieldValues();
 		assertThat(additionalFieldValue).isNull();
 	}
 
@@ -283,14 +289,14 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 		final MiraklApiException exception = new MiraklApiException(
 				new MiraklErrorResponseBean(100, "Something went wrong", "correlation-id"));
 		when(testObj.expectedKycMiraklStatus(kycUserStatusNotificationBodyModelMock))
-				.thenReturn(MiraklShopKycStatus.APPROVED);
+			.thenReturn(MiraklShopKycStatus.APPROVED);
 		when(miraklClientMock.updateShops(any(MiraklUpdateShopsRequest.class))).thenThrow(exception);
 
 		final Throwable throwable = catchThrowable(() -> testObj.updateShop(kycUserStatusNotificationBodyModelMock));
 
 		verify(mailNotificationUtilMock).sendPlainTextEmail("Issue detected updating KYC information in Mirakl",
 				(ERROR_MESSAGE_PREFIX + "Something went wrong updating KYC information of shop [%s]%n%s")
-						.formatted(SHOP_ID, MiraklLoggingErrorsUtil.stringify(exception)));
+					.formatted(SHOP_ID, MiraklLoggingErrorsUtil.stringify(exception)));
 		assertThat(throwable).isEqualTo(exception);
 	}
 
@@ -298,22 +304,22 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 	void updateShop_whenShopUpdateResponseIsNull_shouldLogError() {
 		when(kycUserStatusNotificationBodyModelMock.getClientUserId()).thenReturn(SHOP_ID);
 		when(testObj.expectedKycMiraklStatus(kycUserStatusNotificationBodyModelMock))
-				.thenReturn(MiraklShopKycStatus.APPROVED);
+			.thenReturn(MiraklShopKycStatus.APPROVED);
 
 		testObj.updateShop(kycUserStatusNotificationBodyModelMock);
 
 		assertThat(
 				logTrackerStub.contains("No response was received for update request for shop [%s]".formatted(SHOP_ID)))
-						.isTrue();
+			.isTrue();
 	}
 
 	@Test
 	void updateShop_whenShopUpdateReturnsError_shouldLogTheError_andSendAnEmail_andThrowAnException() {
 		when(kycUserStatusNotificationBodyModelMock.getClientUserId()).thenReturn(SHOP_ID);
 		when(testObj.expectedKycMiraklStatus(kycUserStatusNotificationBodyModelMock))
-				.thenReturn(MiraklShopKycStatus.APPROVED);
+			.thenReturn(MiraklShopKycStatus.APPROVED);
 		when(miraklClientMock.updateShops(any(MiraklUpdateShopsRequest.class)))
-				.thenReturn(miraklUpdatedShopResponseMock);
+			.thenReturn(miraklUpdatedShopResponseMock);
 		when(miraklUpdatedShopResponseMock.getShopReturns()).thenReturn(List.of(miraklUpdatedShopReturnMock));
 		when(miraklUpdatedShopReturnMock.getShopError()).thenReturn(miraklUpdateShopWithErrorsMock);
 		when(miraklUpdateShopWithErrorsMock.getInput().getShopId()).thenReturn(Long.valueOf(SHOP_ID));
@@ -323,7 +329,7 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 		final Throwable throwable = catchThrowable(() -> testObj.updateShop(kycUserStatusNotificationBodyModelMock));
 
 		final String exceptionMessage = "Something went wrong updating KYC information of shop [%s]%n%s"
-				.formatted(SHOP_ID, ERROR_BEAN_MESSAGE);
+			.formatted(SHOP_ID, ERROR_BEAN_MESSAGE);
 		assertThat(logTrackerStub.contains(exceptionMessage)).isTrue();
 		assertThat(throwable).isInstanceOf(HMCException.class);
 
@@ -335,9 +341,9 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 	void updateShop_whenShopUpdateReturnsUpdatedShop_shouldLogUpdate() {
 		when(kycUserStatusNotificationBodyModelMock.getClientUserId()).thenReturn(SHOP_ID);
 		when(testObj.expectedKycMiraklStatus(kycUserStatusNotificationBodyModelMock))
-				.thenReturn(MiraklShopKycStatus.APPROVED);
+			.thenReturn(MiraklShopKycStatus.APPROVED);
 		when(miraklClientMock.updateShops(any(MiraklUpdateShopsRequest.class)))
-				.thenReturn(miraklUpdatedShopResponseMock);
+			.thenReturn(miraklUpdatedShopResponseMock);
 		when(miraklUpdatedShopResponseMock.getShopReturns()).thenReturn(List.of(miraklUpdatedShopReturnMock));
 		when(miraklUpdatedShopReturnMock.getShopUpdated()).thenReturn(miraklShopMock);
 		when(miraklShopMock.getId()).thenReturn(SHOP_ID);
@@ -347,8 +353,8 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 		testObj.updateShop(kycUserStatusNotificationBodyModelMock);
 
 		assertThat(logTrackerStub
-				.contains("KYC status updated to [%s] for shop [%s]".formatted(MiraklShopKycStatus.APPROVED, SHOP_ID)))
-						.isTrue();
+			.contains("KYC status updated to [%s] for shop [%s]".formatted(MiraklShopKycStatus.APPROVED, SHOP_ID)))
+			.isTrue();
 	}
 
 	@Test
@@ -364,7 +370,7 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 	void deleteInvalidDocuments_whenKycDocumentDoesNotContainsDocuments_shouldNotCallDeleteDocuments() {
 		when(kycUserStatusNotificationBodyModelMock.getClientUserId()).thenReturn(SHOP_ID);
 		when(miraklSellerDocumentsExtractServiceMock.extractKYCSellerDocuments(SHOP_ID))
-				.thenReturn(kycDocumentInfoModelMock);
+			.thenReturn(kycDocumentInfoModelMock);
 
 		testObj.deleteInvalidDocuments(kycUserStatusNotificationBodyModelMock);
 
@@ -375,11 +381,11 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 	void deleteInvalidDocuments_whenKycDocumentAreValid_shouldNotCallDeleteDocuments() {
 		when(kycUserStatusNotificationBodyModelMock.getClientUserId()).thenReturn(SHOP_ID);
 		when(miraklSellerDocumentsExtractServiceMock.extractKYCSellerDocuments(SHOP_ID))
-				.thenReturn(kycDocumentInfoModelMock);
+			.thenReturn(kycDocumentInfoModelMock);
 		when(notificationDocumentOneMock.getDocumentStatus()).thenReturn(KYCDocumentStatusEnum.VALID);
 		when(notificationDocumentTwoMock.getDocumentStatus()).thenReturn(KYCDocumentStatusEnum.VALID);
 		when(kycUserStatusNotificationBodyModelMock.getDocuments())
-				.thenReturn(List.of(notificationDocumentOneMock, notificationDocumentTwoMock));
+			.thenReturn(List.of(notificationDocumentOneMock, notificationDocumentTwoMock));
 
 		testObj.deleteInvalidDocuments(kycUserStatusNotificationBodyModelMock);
 
@@ -392,14 +398,14 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 	void deleteInvalidDocuments_whenOneKycDocumentIsInvalid_shouldCallDeleteDocuments() {
 		when(kycUserStatusNotificationBodyModelMock.getClientUserId()).thenReturn(SHOP_ID);
 		when(miraklSellerDocumentsExtractServiceMock.extractKYCSellerDocuments(SHOP_ID))
-				.thenReturn(kycDocumentInfoModelMock);
+			.thenReturn(kycDocumentInfoModelMock);
 		when(notificationDocumentOneMock.getDocumentStatus()).thenReturn(KYCDocumentStatusEnum.INVALID);
 		when(kycUserStatusNotificationBodyModelMock.getDocuments()).thenReturn(List.of(notificationDocumentOneMock));
 		when(notificationDocumentOneMock.getCreatedOn()).thenReturn(LocalDateTime.MAX);
 		when(kycDocumentNotificationModelListConverterMock.convert(notificationDocumentOneMock))
-				.thenReturn(List.of(MIRAKL_CUSTOM_FIELD_NAME_1));
+			.thenReturn(List.of(MIRAKL_CUSTOM_FIELD_NAME_1));
 		when(kycDocumentInfoModelMock.getMiraklShopDocuments())
-				.thenReturn(List.of(miraklShopDocumentOneMock, miraklShopDocumentTwoMock));
+			.thenReturn(List.of(miraklShopDocumentOneMock, miraklShopDocumentTwoMock));
 		when(miraklShopDocumentOneMock.getTypeCode()).thenReturn(MIRAKL_CUSTOM_FIELD_NAME_1);
 		when(miraklShopDocumentOneMock.getDateUploaded()).thenReturn(new Date());
 		when(miraklShopDocumentTwoMock.getTypeCode()).thenReturn(MIRAKL_CUSTOM_FIELD_NAME_2);
@@ -413,14 +419,14 @@ class AbstractKYCUserStatusExecutorNotificationStrategyTest {
 	void deleteInvalidDocuments_whenOneKycDocumentIsInvalidButThereIsANewDocumentInMirakl_shouldNotCallDeleteDocuments() {
 		when(kycUserStatusNotificationBodyModelMock.getClientUserId()).thenReturn(SHOP_ID);
 		when(miraklSellerDocumentsExtractServiceMock.extractKYCSellerDocuments(SHOP_ID))
-				.thenReturn(kycDocumentInfoModelMock);
+			.thenReturn(kycDocumentInfoModelMock);
 		when(notificationDocumentOneMock.getDocumentStatus()).thenReturn(KYCDocumentStatusEnum.INVALID);
 		when(kycUserStatusNotificationBodyModelMock.getDocuments()).thenReturn(List.of(notificationDocumentOneMock));
 		when(notificationDocumentOneMock.getCreatedOn()).thenReturn(LocalDateTime.MIN);
 		when(kycDocumentNotificationModelListConverterMock.convert(notificationDocumentOneMock))
-				.thenReturn(List.of(MIRAKL_CUSTOM_FIELD_NAME_1));
+			.thenReturn(List.of(MIRAKL_CUSTOM_FIELD_NAME_1));
 		when(kycDocumentInfoModelMock.getMiraklShopDocuments())
-				.thenReturn(List.of(miraklShopDocumentOneMock, miraklShopDocumentTwoMock));
+			.thenReturn(List.of(miraklShopDocumentOneMock, miraklShopDocumentTwoMock));
 		when(miraklShopDocumentOneMock.getTypeCode()).thenReturn(MIRAKL_CUSTOM_FIELD_NAME_1);
 		when(miraklShopDocumentOneMock.getDateUploaded()).thenReturn(new Date());
 		when(miraklShopDocumentTwoMock.getTypeCode()).thenReturn(MIRAKL_CUSTOM_FIELD_NAME_2);
