@@ -7,13 +7,13 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
+import org.yaml.snakeyaml.LoaderOptions;
 import org.yaml.snakeyaml.Yaml;
 import org.yaml.snakeyaml.constructor.Constructor;
 
 import java.io.InputStream;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -28,13 +28,14 @@ public class MiraklFieldSchemaRepositoryImpl implements MiraklFieldSchemaReposit
 	}
 
 	private List<MiraklSchemaGroupYaml> loadCustomFieldGroups(final boolean includeKycRequiredFields) {
-		return Arrays.stream(resources).map(this::loadYaml)
-				.filter(g -> includeKycRequiredFields || Boolean.FALSE.equals(g.getMetadata().getRequiredForKyc()))
-				.collect(Collectors.toList());
+		return Arrays.stream(resources)
+			.map(this::loadYaml)
+			.filter(g -> includeKycRequiredFields || Boolean.FALSE.equals(g.getMetadata().getRequiredForKyc()))
+			.toList();
 	}
 
 	private MiraklSchemaGroupYaml loadYaml(final Resource resource) {
-		final Yaml yaml = new Yaml(new Constructor(MiraklSchemaGroupYaml.class));
+		final Yaml yaml = new Yaml(new Constructor(MiraklSchemaGroupYaml.class, new LoaderOptions()));
 		try (final InputStream is = resource.getInputStream()) {
 			return yaml.load(is);
 		}
